@@ -58,6 +58,8 @@ TBD
 	  Thanks Jan-Piet Mens
 	* bugfix: -U option to ldns-signzone to sign with every algorithm
 	  Thanks Guido Kroon
+	* bugfix #725: allow RR-types on the type bitmap window border
+	  Thanks Pieter Lexis
 
 1.6.17	2014-01-10
 	* Fix ldns_dnssec_zone_new_frm_fp_l to allow the last parsed line of a
